[tool.poetry]
name = "rest-api-contacts"
version = "0.1.0"
description = ""
authors = ["kirienkovitaliy <kirienkovitaliy1989@gmail.com>"]
readme = "README.md"
packages = [{include = "rest_api_contacts"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.97.0"
uvicorn = {extras = ["standart"], version = "^0.22.0"}
sqlalchemy = "^2.0.16"
psycopg2-binary = "^2.9.6"
alembic = "^1.11.1"
pydantic = {extras = ["dotenv"], version = "^1.10.9"}
passlib = "^1.7.4"
jose = "^1.0.0"
libgravatar = "^1.0.4"
pyjwt = "^2.7.0"
python-multipart = "^0.0.6"
bcrypt = "^4.0.1"
fastapi-mail = "^1.3.0"
redis = "^4.6.0"
fastapi-limiter = "^0.1.5"
cloudinary = "^1.33.0"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
